# gladbot

./: Cargo.toml  README.md  build.sh
.github/workflows/: ci.yml  clippy.yml
src/: main.rs
