[package]
name = "gladbot"
version = "0.1.0"
authors = ["Ray Slakinski <ray.slakinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
discord = {git = "https://github.com/SpaceManiac/discord-rs", branch = "master"}