[package]
name = "gladbot"
version = "0.3.0"
authors = ["Ray Slakinski <ray.slakinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serenity = "0.11.2"
rusqlite = "0.27.0"
random_name_generator = "0.1.2"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
handlebars = "4.2.2"
rust-embed = "6.3.0"
