[package]
name = "gladbot"
version = "0.3.1"
authors = ["Ray Slakinski <ray.slakinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serenity = "0.11"
rusqlite = "0.31"
random_name_generator = "0.3"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
handlebars = "5.1"
rust-embed = "8.3"
regex = "1.10"
